--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chess.js": "^1.0.0-beta.8",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   }
 }
